--- a/_posts/2021-07-29-k8s-crds.md
+++ b/_posts/2021-07-29-k8s-crds.md
@@ -1,4 +1,5 @@
 # Kubernetes crds
+![](/assets/img/k8s-logo.jpeg)
 ## 序
 crd 即用于记录某个资源的资源。类似于一个类，你用它可以创建很多实例。你在api-server 那里注册了crd之后，api-server就知道有了这种资源的配置文件，然后你就可以通过yaml文件来创建这个“类”的实例了。
 
@@ -126,5 +127,5 @@ ok, crd 已经对应的object已经定义完毕。接下来就是创建这个操
 
 现在基本的做法就是使用client-gen,让client-gen自动生成client已经informer，lister等等。我们在下一届介绍。
 
+鉴于大家对文章内容有些地方英翻中的观点有一点不太一样，所以接下来我将全部使用英文来介绍关于k8s的内容，这样所有的固定名词都是原滋原味更容易理解。
 
-#### [last note:golang生产者消费者模型](https://minghuiyuan.github.io/myblog/contents/02-vim_vi) < > [next note](...)
