--- a/_posts/2021-07-30-vi.md
+++ b/_posts/2021-07-30-vi.md
@@ -1,3 +1,7 @@
+---
+layout: vi and vim
+title:  "Welcome to minghuiyuan"
+---
 # Vim and vi
 [上一篇blog](https://minghuiyuan.github.io/myblog/contents/01-generator_consumer_model)主要记录了Golang语言版本的最简单的“生产者消费者”模型。
 
